--- a/StyleResume.css
+++ b/StyleResume.css
@@ -1,3 +1,12 @@
+html { 
+  background: url("background-2633962_960_720.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+ font-family: 'Merienda', cursive; 
+ font-size: 22px;
+}
 .grid_cont{
 		display: grid;
 		grid-template-columns: 2fr 1fr;
@@ -5,19 +14,16 @@
 }
 .name{
 	grid-row: 1/2;
-	grid-column: 1/2;
+	grid-column: 1/3;
 
 }
 .img
 {
-
+	width: auto;
 	grid-column: 2/3;
-
-
 }
+.contact{
 
-
-
-
-
+	justify-content: center;
+}
 
