--- a/StyleResume.css
+++ b/StyleResume.css
@@ -1,29 +1,64 @@
 html { 
-  background: url("background-2633962_960_720.jpg") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+ 
  font-family: 'Merienda', cursive; 
- font-size: 22px;
+ font-size: 20px;
 }
 .grid_cont{
 		display: grid;
-		grid-template-columns: 2fr 1fr;
-		grid-template-rows: repeat(5,auto);
+		grid-template-columns: 1fr 1fr 1fr;
+		
+	
 }
 .name{
-	grid-row: 1/2;
-	grid-column: 1/3;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-column: 1/4;
+	background: linear-gradient(200deg, #0E684D 49%, #308C48 50%);
+	
+	
+}
+.nameh1{
+	
+	grid-column: 1/2;
 
 }
-.img
-{
-	width: auto;
-	grid-column: 2/3;
+.nameh2{
+	
+	grid-column: 1/2;
+	
+	
 }
-.contact{
-
-	justify-content: center;
+.namep{
+	
+	grid-column: 1/2;
+	
+	
+}
+#img{
+	border: #0E684D solid 9px;
+	margin-bottom: -30px;
+	grid-column: 3/4;
 }
 
+.ex{
+	grid-column: 1/2;
+}
+.skill{
+	grid-column: 3/4;
+}
+.lang{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column: 3/4;
+
+}
+.pro{
+	grid-column: 1/2
+}
+
+.line{
+	grid-column: 1/4;
+	margin: 50px;
+	background-color: #0E684D;
+	height: 6px;
+}
